# nn

./: Cargo.toml  NOTES.md  README.md  bm.py  bm.txt  flake.nix  perf.data.old
.direnv/: flake-profile-1-link
src/: cpu_backend.rs  device.rs  dtype.rs  layout.rs  lib.rs  main.rs  nn.rs  shape.rs  storage.rs  tensor.rs
src/nn/: mod.rs  nn.rs  optim.rs
src/tensor/: backward.rs  mod.rs  node.rs  tensor.rs
src/tensor/ops/: activation.rs  arithmetic.rs  mod.rs
