[package]
name = "nn"
version = "0.1.0"
edition = "2021"
authors = [ "Vilhelm Bergsøe <vilhelmbergsoe@gmail.com>" ]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fastapprox = "0.3.0"
ndarray = "0.15.6"
radsort = "0.1.0"
rand = "0.8.5"
