[package]
name = "nn"
version = "0.1.0"
edition = "2021"
authors = [ "Vilhelm Bergsøe <vilhelmbergsoe@gmail.com>" ]
license = "MIT"
include = ["src/**/*", "LICENSE", "README.md"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ndarray = "0.15.6"
num-traits = "0.2.17"
rand = "0.8.5"
